infra/dev/k8s/app-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-back-deployment
  labels:
    app: app-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-back
  template:
    metadata:
      labels:
        app: app-back
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "db:27017"
    spec:
      containers:
        - name: app-back
          image: graphql-sinatra-puma
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: app-back
spec:
  selector:
    app: app-back
  ports:
    - protocol: TCP
      port: 4000
