infra/dev/k8s/app-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-front-deployment
  labels:
    app: app-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
    spec:
      containers:
        - name: app-front
          image: apollo-react-node
          ports:
            - containerPort: 3000
    
---
apiVersion: v1
kind: Service
metadata:
  name: app-front
spec:
  selector:
    app: app-front
  ports:
  - protocol: TCP
    port: 3000
