infra/dev/k8s/proxy-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-back-deployment
  labels:
    app: proxy-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-back
  template:
    metadata:
      labels:
        app: proxy-back
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/connect-service-upstreams': 'app-back:4000'
    spec:
      containers:
        - name: proxy-back
          image: nginx-back
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-back
spec:
  selector:
    app: proxy-back
  ports:
  - protocol: TCP
    port: 8080
