infra/dev/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-front
                port:
                  number: 80
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: proxy-back
                port:
                  number: 8080
